--- a/frontend/src/pages/game.css
+++ b/frontend/src/pages/game.css
@@ -1,7 +1,4 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     margin: 0;
 }
@@ -18,19 +15,14 @@ body {
     display: grid;
     grid-template-columns: repeat(7, 80px);
     grid-template-rows: repeat(6, 80px);
-    /* grid-gap: 10px; */
+    /* grid-column-gap: 5px; */
 }
 
 .cell {
     width: 70px;
     height: 70px;
-    /* margin: 20px; */
     border: 5px solid rgb(110, 106, 227);
     background-color: #181a1b;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
     cursor: pointer;
     border-radius: 100%;
 }
@@ -45,4 +37,70 @@ body {
 
 .cell.yellow-piece {
     background-color: rgba(255, 245, 46, 0.852);
+}
+
+.page-column {
+    box-sizing: border-box;
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    height: 100vh;
+    align-items: center;
+}
+
+.left,
+.right {
+    width: 25%;
+    display: flex;
+    justify-content: center;
+}
+
+.middle {
+    width: 50%;
+}
+
+.page-row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.content-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.top {
+    height: 15%;
+}
+
+.bottom {
+    height: 75%;
+}
+
+.gamecode {
+    font-size: 50px;
+}
+
+.loading-content {
+    padding: 80px;
+}
+
+.user-box {
+    width: 50%;
+    /* border: 15px solid rgba(158, 164, 236, 0.253); */
+    background-color: rgba(158, 164, 236, 0.267);
+    padding: 50px;
+    height: 70%;
+    border-radius: 50px;
+}
+
+.turn-icon {
+    height: 150px;
+    width: 150px;
+    border-radius: 100%;
 }
